# warp-template

./: .gitignore  Cargo.toml  README.md
tests/: .env.example  contract.wasm  package-lock.json  package.json  tsconfig.json
tests/src/: 1-hello-warp.test.ts  consts.ts  hello.test.ts
tests/src/utils/: arch.ts  localsecret.ts
