[workspace]
members = [ "contracts/*", "packages/*" ]

[workspace.dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std = { version = "1.1.9", features = ["stargate"] }
cosmwasm-storage = "1.1.9"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "0.13.1"
schemars = "0.8.11"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }