[workspace]
members = [ "contracts/*", "packages/*" ]

[workspace.package]
version = "0.1.0"
authors = [ "Warp", "You" ]
edition = "2021"

[workspace.dependencies]
cosmwasm-schema = "1.4.1"
cosmwasm-std = { version = "1.4.1", features = ["stargate"] }
cosmwasm-storage = "1.4.1"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw721 = "0.18"
cw721-base = "0.18"
schemars = "0.8.11"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.1" 
thiserror = { version = "1.0.37" }
cw-multi-test = "0.20.0"